--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             <div class="col-lg-7">
               <div class="banner_content">
                 <h3 class="text-uppercase">Hell0</h3>
-                <h1 class="text-uppercase">I am Vamsikrishna</h1>
-                <h5 class="text-uppercase">senior php engineer</h5>
+                <h1 class="text-uppercase">I am Vamsi krishna</h1>
+                <h5 class="text-uppercase">senior php developer</h5>
                 <div class="d-flex align-items-center">
                   <a class="primary_btn" href="#"><span>Hire Me</span></a>
                   <a class="primary_btn tr-bg" href="#"><span>Get CV</span></a>
